[package]
name = "hyperprocess_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

anyhow = "1.0"
futures-util = "0.3"
hyperware_app_common = { path = "../hyperware_app_common" }
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["logging"], rev = "cfd6843" }
once_cell = "1.20.2"
paste = "1.0"
process_macros = "0.1.0"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "1.0", features = ["v4"] }
wit-bindgen = "0.36.0"
