[package]
name = "hyperware_app_common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["logging"], rev = "cfd6843" }
futures-util = "0.3"
once_cell = "1.20.2"
paste = "1.0"
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }
wit-bindgen = "0.36.0"

[lib]
crate-type = ["lib"]

